--- a/index.html
+++ b/index.html
@@ -75,6 +75,64 @@
                     </div>
                 </div>
             </section>
+
+            <!-- What I do section -->
+            <section class="what-i-do">
+                <h3 class="section-title">What I Do</h3>
+                <p class="section-description">
+                    I have more than 10 years experience building software for
+                    clients all over the world. Below is a quick overview of my
+                    main technical skill sets and technologies i use. Want to
+                    find out more about my experience? Check out my online
+                    resume and project portfolio.
+                </p>
+                <div class="skills-container">
+                    <div class="skill">
+                        <img src="images/icons/js.png" alt="JavaScipt" />
+                        <p class="skill-title">Vanilla JavaScript</p>
+                        <p class="skill-description">
+                            List skill/technologies here. You can change the
+                            icon above to any of the 1500+ FontAwesome 5 free
+                            icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/react.png" alt="React" />
+                        <p class="skill-title">React</p>
+                        <p class="skill-description">
+                            List skill/technologies here. You can change the
+                            icon above to any of the 1500+ FontAwesome 5 free
+                            icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/nodejs.png" alt="NodeJS" />
+                        <p class="skill-title">NodeJS</p>
+                        <p class="skill-description">
+                            List skill/technologies here. You can change the
+                            icon above to any of the 1500+ FontAwesome 5 free
+                            icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <div class="skill">
+                        <img src="images/icons/mongo.png" alt="MongoDB" />
+                        <p class="skill-title">MongoDB</p>
+                        <p class="skill-description">
+                            List skill/technologies here. You can change the
+                            icon above to any of the 1500+ FontAwesome 5 free
+                            icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Resume Section -->
+            <section class="resume">
+                <h3 class="section-tile">A Summary of my Resume</h3>
+                <div class="resume-content">
+                    <div></div>
+                </div>
+            </section>
         </main>
 
         <footer></footer>
