--- a/index.html
+++ b/index.html
@@ -229,6 +229,9 @@
                     <button class="btn-primary">Download CV</button>
                 </div>
             </section>
+        </main>
+
+        <footer>
             <!-- contact section -->
             <section class="contact">
                 <div>
@@ -266,8 +269,6 @@
                     </form>
                 </div>
             </section>
-        </main>
-
-        <footer></footer>
+        </footer>
     </body>
 </html>
